# CS5284_2025

./: .gitignore  pyproject.toml  utils.py
codes/02_Graph_Science/: code01_solution.ipynb  code02_solution.ipynb  code03_solution.ipynb  code04_solution.ipynb
codes/03_Graph_Clustering/: code01_solution.ipynb  code02_solution.ipynb  code04_solution.ipynb  code05_solution.ipynb  code06_solution.ipynb
codes/03_Graph_Clustering/lib/: utils.py
codes/04_Graph_SVM/: code01_solution - linear svm.ipynb  code02_solution - soft linear svm.ipynb  code03_solution - kernel svm.ipynb
codes/05_Recommendation/: code01_solution.ipynb
codes/coding_sample/: coding_sample.html  coding_sample.ipynb  coding_sample_solution.html
codes/coding_sample/lib/: utils.py
notes/: freetext.txt
