[tool.poetry]
name = "gnn-course"
version = "0.1.0"
description = "GNN course environment translated from Conda to Poetry"
authors = ["Ernest Liu <ernestliu64@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

# --- Basic ---
numpy = "1.24.*"
jupyter = "1.0.*"
ipython = "8.12.*"
matplotlib = "3.7.*"
scipy = "1.10.1"
networkx = "3.1"
pandas = "2.0.*"
seaborn = "0.13.*"

# --- Graph ---
PyMetis = "2023.1"
python-louvain = "0.16"

# --- Molecule ---
rdkit = "2022.9.5"  # fallback PyPI version

# --- Deep Learning ---
torch = "2.1.2"
torchvision = "0.16.*"

# --- Pip-only dependencies ---
plotly = "5.22.0"
scikit-learn = "1.3.2"
umap-learn = "0.5.6"
torch-geometric = "2.5.1"
dgl = "1.0.0"
